# swagger.yaml
@@ -172,8 +172,44 @@ paths:
                 items:
                   $ref: '#/components/schemas/TaskGetResponse'
         500:
-          description: internal server error                                                    
-      
+          description: internal server error
+          
+  /v1/task/{id}/comments:
+    get:
+      description: get all comments for task
+      parameters:
+        - in: path
+          name: id   
+          required: true
+          schema:
+            type: integer
+            minimum: 1
+        - in: query
+          name: page
+          schema:
+            type: int
+          required: false
+        - in: query  
+          name: pageLimit
+          schema:
+            type: int
+          required: false
+      responses:
+        200:
+          description: OK                                                               
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Comment'
+        400:
+          description: task id is empty                  
+        404:
+          description: task with given id not found
+        500: 
+          description: interal server error     
+                  
 components:
   schemas:
     Ping:
@@ -220,7 +256,6 @@ components:
           type: integer
         createdAt:
           type: string
-          format: date
         isEdited:
           type: boolean
         
